--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@ body {
 
 #stopwatch {
     /* border: 2px solid black; */
-    padding: 5%;
+    /* padding: 5%; */
     font-size: 7rem;
     color: white;
 }
